fix alignment for mobile + bg color on app

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,11 +3,11 @@
   margin: 0;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 
   .quiz {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: 100%;
   }
 }
