--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,9 @@
 body {
   text-align: center;
   margin: 0;
+  background-color: darkcyan;
 }
 
 html, body {
-  height: 100vh;
+  height: 100%;
 }
